<resources>
    <string name="app_name">WaterPark</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_option">Choose</string>
    <string name="button_browse_parking">Browse Parking</string>
    <string name="button_offer_parking">Post Your Parking</string>
    <string name="title_activity_browse_search">What do you want</string>
    <string name="text_search">Search</string>
    <string name="text_use_location">Use location</string>
    <string name="text_search_hint">Search: Landmark, Address, PinCode</string>
    <string name="text_choose_your_vehicle">Choose your vehicle</string>
    <string name="text_date">Date</string>
    <string name="text_tomorrow">Tomorrow</string>
    <string name="text_today">Today</string>
    <string name="text_when">When?</string>
    <string name="title_activity_post_search">Post your parking</string>
    <string name="text_parking_for_vehicle">Parking available for</string>
    <string name="title_activity_post_details">Parking Owner details</string>
    <string name="text_amount">Amount(CAD/day)</string>
    <string name="text_0_0">0.0</string>
    <string name="text_0">0</string>
    <string name="text_capacity">Capacity</string>
    <string name="text_start_date">YYYY-MM-DD</string>
    <string name="text_end_date">YYYY-MM-DD</string>
    <string name="text_owner_name">Your Name</string>
    <string name="text_address">Your Address</string>
    <string name="text_address_eg">E.g. Suite No, Street Name, City, State</string>
    <string name="text_email">Your Email</string>
    <string name="text_email_eg">E.g. abc@xyz.com</string>
    <string name="text_phone">Contact No</string>
    <string name="text_next">Next</string>
    <string name="text_phone_eg">E.g. XXX-XXX-XXXX</string>
    <string name="text_name_eg">E.g. Jonh Snow</string>
    <string name="getting_data">Loading data ...</string>
    <string name="title_activity_main">Available Parking lots</string>
    <string name="title_activity_post_posted">Parking Posted</string>
    <string name="text_correct_message">Great! Your parking has been</string>
    <string name="text_incorrect_message">Sorry! Your parking was not</string>
    <string name="text_post">Post Parking</string>
    <string name="text_posted_message">Posted</string>
    <string name="text_not_posted_message">Not Posted</string>
    <string name="text_terms"><![CDATA[*Terms & Conditions: The contents of this app, including without limitation, all data, information, text,
graphics, links and other materials (collectively, the “Contents”), are provided as a
convenience to our app users and are meant to be used for informational purposes only.]]></string>
    <string name="title_activity_post_not_posted">Oops ...</string>
</resources>
