<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="waterpark.com.waterpark.PostDetailsActivity"
    android:orientation="vertical"
    android:layout_gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:textColor="#9f9f9f"
        android:textStyle="bold"
        android:text="@string/text_owner_name"/>

    <EditText
        android:id="@+id/text_name"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:background="@drawable/shape_edittext"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:singleLine="true"
        android:hint="@string/text_name_eg"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:textColor="#9f9f9f"
        android:textStyle="bold"
        android:text="@string/text_address"/>

    <EditText
        android:id="@+id/text_address"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:background="@drawable/shape_edittext"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:singleLine="true"
        android:hint="@string/text_address_eg"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:textColor="#9f9f9f"
        android:textStyle="bold"
        android:text="@string/text_email"/>

    <EditText
        android:id="@+id/text_email"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:background="@drawable/shape_edittext"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:singleLine="true"
        android:hint="@string/text_email_eg"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:textColor="#9f9f9f"
        android:textStyle="bold"
        android:text="@string/text_phone"/>

    <EditText
        android:id="@+id/text_phone"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:background="@drawable/shape_edittext"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:singleLine="true"
        android:phoneNumber="true"
        android:hint="@string/text_phone_eg"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_gravity="center">
        <Button
            android:id="@+id/id_button_next"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_button_green"
            android:text="@string/text_next"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

</LinearLayout>
