<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="waterpark.com.waterpark.PostNotPostedActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/id_image_correct_incorrect"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_incorrect"/>
        <TextView
            android:id="@+id/id_text_correct_incorrect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="25dp"
            android:gravity="center"
            android:text="@string/text_incorrect_message"
            />
        <TextView
            android:id="@+id/id_text_posted"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="40dp"
            android:textStyle="bold"
            android:textColor="#27ae60"
            android:gravity="center"
            android:text="@string/text_not_posted_message"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/id_text_terms_conditions"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|right"
        android:gravity="left"
        android:layout_marginTop="60dp"
        android:padding="10dp"
        android:text="@string/text_terms"
        />


</LinearLayout>
